--- a/MayaPlugin/MayaPlugin.vcxproj
+++ b/MayaPlugin/MayaPlugin.vcxproj
@@ -126,12 +126,16 @@
       <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>python loadPlugin.py</Command>
-      <Message>Load Plugin after build</Message>
+      <Command>
+      </Command>
+      <Message>
+      </Message>
     </PostBuildEvent>
     <PreBuildEvent>
-      <Command>python unloadPlugin.py</Command>
-      <Message>Unload Maya plugin before building</Message>
+      <Command>
+      </Command>
+      <Message>
+      </Message>
     </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
